# 640_320_code

./: CMakeLists.txt  README.md
include/core/: data_bridge.hpp  data_packet.hpp  encode_worker.hpp
include/providers/: carina_a1088.h  dv89_provider.hpp  oak_provider.hpp
include/storage/: storage_worker.hpp
include/utils/: logger.hpp  time_sync.hpp
oak_vio_config/: custom_config.yaml
scripts/: cmakebuild.sh  manage.sh  setup_env.sh
src/: main.cpp
src/core/: data_bridge.cpp  encode_worker.cpp
src/providers/: dv89_provider.cpp  oak_provider.cpp
src/storage/: storage_worker.cpp
test/: test_padding.cpp
